# proj-kurssi

./: .gitignore  LICENSE  README.md  getconstraints.py  main.py  psqlparser.py  psqlwrapper.py  pyproject.toml  smt.py  sqlparser.py  test_qepparser.py  wrapper.py
.github/actions/: install.yml
.github/actions/install/: action.yml
.github/workflows/: ci-cd.yml  ci-flow.yml  grade.yml  pr_flow.yml  push_flow.yml  pytest.yml  sphinx.yml  test-n-doc.yml
docs/: architecture.md  conf.py  index.rst  interfaces.md  maintenance-plan.md  pg4n.md  program-architecture.md
docs/_templates/: footer.html
scripts/: cd-publish.sh  ci-grade.sh  gen_config_values.bash
src/: conf.py  index.rst
src/pg4n/: cmp_domain_checker.py  cmpdomains.py  config_parser.py  config_reader.py  config_values.py  eq_wildcard_checker.py  errfmt.py  implied_expression_checker.py  inconsistent_expression_checker.py  main.py  nested_condition_checker.py  orderby.py  psqlconninfo.py  psqlparser.py  psqlwrapper.py  qepparser.py  semanticrouter.py  sqlparser.py  strange_having_checker.py  subquery_order_by_checker.py  subquery_orderby_checker.py  subquery_select_checker.py  sum_distinct_checker.py  test_qepparser.py  vt100decode.py
src/pg4n/test/: test_cmp_domain_checker.py  test_cmpdomains.py  test_config_parser.py  test_eq_wildcard_checker.py  test_errfmt.py  test_implied_expression_checker.py  test_inconsistent_expression_checker.py  test_nested_condition_checker.py  test_psqlparser.py  test_psqlwrapper.py  test_qepparser.py  test_sqlparser.py  test_strange_having_checker.py  test_subquery_order_by_checker.py  test_subquery_orderby_checker.py  test_subquery_select_checker.py  test_sum_distinct_checker.py
