[tool.poetry]
name = "pg4n"
version = "0.1.1"
description = "PostgreSQL for novices - helps debug PostgreSQL queries"
authors = [
    "Jesper Niemelä <jesper.niemela@tuni.fi>",
    "Joni Nikki <joni.nikki@tuni.fi>",
    "Tatu Heikkilä <tatu.heikkila@tuni.fi>",
    "Tatu Sirkeoja <tatu.sirkeoja@tuni.fi>",
]
readme = "README.md"
packages = [{ include = "pg4n", from = "src" }]

[tool.poetry.scripts]
pg4n = "pg4n:main.main"

[tool.poetry.dependencies]
python = "^3.10"
sqlglot = "^6.3.2"
pytest = "^7.1.3"
sphinx = "^5.2.3"
psycopg = {extras = ["binary"], version = "^3.1.3"}
pytest-postgresql = "^4.1.1"
pexpect = "^4.8.0"
sphinx-autodoc-typehints = "^1.19.4"
myst-parser = "^0.18.1"
sphinx-rtd-theme = "^1.0.0"
pyte = "^0.8.1"
pyparsing = "^3.0.9"

[tool.poetry.group.dev.dependencies]
autopep8 = "^1.7.0"

[tool.poetry.group.ci.dependencies]
pylint = "^2.15.4"
black = "^22.10.0"
mypy = "^0.982"
isort = "^5.10.1"
